# dlchess

./: .clang-tidy  .gitignore  404.html  CMakeLists.txt  Dockerfile  README.md  compose.yml  index.html  mkdocs.yml  pyproject.toml
blog/: index.html
design/: index.html
design/alpha-zero/: index.html
design/chess-framework/: index.html
design/neural-network/: index.html
design/uci/: index.html
docs/: index.md  sample-games.md  training-runs.md
docs/design/: alpha-zero.md  chess-framework.md  index.md  neural-network.md  uci.md
nn/: benchmark_onnx.py  conv_4x64.py  resid_net.py  squeeze_net.py
openings/: openings-6ply-1000.pgn
sample-games/: index.html
scripts/: plot_elo.py  prepare_docker_env_file.sh  run_training.sh
search/: search_index.json
src/: agent_base.h  agent_random.cpp  agent_random.h  bitboard.cpp  bitboard.h  evaluate.cpp  hashcat.h  main.cpp  matchup.cpp  myrand.cpp  myrand.h  obs_diff.cpp  obs_diff.h  pieces.cpp  pieces.h  selfplay.cpp  simulation.cpp  simulation.h  squares.cpp  squares.h  test.cpp  time_management.h  utils.cpp  utils.h  version.cpp  version.h
src/board/: board.cpp  board.h  game_moves.cpp  game_moves.h  hash.h  io.cpp  makemove.cpp  movegen.cpp  movegen.h  perft.cpp  piece_moves.cpp  piece_moves.h
src/chess/: bitboard.cpp  bitboard.h  board.cpp  board.h  game_moves.cpp  game_moves.h  hash.h  io.cpp  makemove.cpp  movegen.cpp  movegen.h  obs_diff.cpp  obs_diff.h  perft.cpp  piece_moves.cpp  piece_moves.h  pieces.cpp  pieces.h  squares.cpp  squares.h  transform.cpp  transform.h
src/io/: uci.cpp  uci.h
src/zero/: agent_zero.cpp  agent_zero.h  cached_inference.cpp  cached_inference.h  encoder.cpp  encoder.h  experience.cpp  experience.h  inference.h  tensor.h
train/: data.py  train.py
training-runs/: index.html
