[project]
name = "dlchess"
version = "0.1.0"
description = "Python dependencies for dlchess"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "onnx>=1.17.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "mkdocs-material>=9.5.49",
    "ruff>=0.8.4",
]
bench = [
    "onnxruntime>=1.20.1",
]

[tool.ruff]
include = ["nn/*.py", "train/*.py", "**/pyproject.toml"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
